--- a/gene-management-ui/package.json
+++ b/gene-management-ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "nanoid": "^5.1.5",
     "pinia": "^3.0.2",
+    "plotly.js-dist-min": "^3.1.0",
     "scichart": "^4.0.848",
     "vite-plugin-static-copy": "^3.1.2",
     "vue": "^3.5.13"
