--- a/gene-management-ui/package.json
+++ b/gene-management-ui/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chroma-js": "^3.1.2",
     "nanoid": "^5.1.5",
     "pinia": "^3.0.2",
     "plotly.js-dist-min": "^3.1.0",
